shop page changes

--- a/index.html
+++ b/index.html
@@ -239,11 +239,12 @@
       
     </div>
     </div>
-    <a href="pages/news.html"><p class="text-center">Click here to view more news strories...</p></a>
+    <a href="pages/news.html"><p class="text-center">Click here to view more news stories...</p></a>
+    <hr>
   </div>
 
   
-<hr>
+
 
 <div class = "container" >
   <div class="row ">
@@ -298,12 +299,13 @@
 
 
 </div>
-</div>
 <hr>
 </div>
 
+</div>
 
-<hr>
+
+
 
 
 
