--- a/pages/donations.html
+++ b/pages/donations.html
@@ -74,7 +74,7 @@
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
-    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
       <div class ="text-area">
         </br>
         <h2 class = " text-center"> A domestic abuse organisation for African heritage people</h2> <hr>
@@ -90,10 +90,23 @@
 
 
 <p class= "text-justify">Your donations help us provide practical support and assist us with utility bills, travel, venue costs and providing essential refreshments for survivors and volunteers. Your donations also means we can organise residential visits and days out for those in need of respite. The money you help us raise means that we can continue to help those vulnerable victims that are often suffering in silence. </p>
-
-
-<a href = " http://uk.virginmoneygiving.com/fund/sistahspace" target="_blank"> Virgin Money Giving - fundraising site </a>
 <hr>
+
+<a href = " http://uk.virginmoneygiving.com/fund/sistahspace" target="_blank"> <h4 class="text-center">Virgin Money Giving - fundraising site</h4> </a>
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <img src="../images/pic1.jpg" class="img-responsive">
+    <p>Hannah Griffiths delivers a cheque for over &pound300 to Sistah Space. The money was raised on our behalf by Hannah's wonderful husband who ran the Hackney marathon.</p>
+  </div>
+  <div class ="col-md=6">
+    <p> content</p>
+  </div>
+</div>
+  <hr>
+
+
 </div>
 </div>
 
