--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -56,7 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-          
+
         <li><a href="../pages/news.html">News</a></li>
 
       </ul>  
@@ -88,13 +88,13 @@
     <div class="main-copy">
 
 
-<h2> Our team</h2>
+<h1> Our team</h1>
 
-<h1>Ngozi Fulani</h1> (CEO, IDVA, ISVA, Housekeeping)
+<h3>Ngozi Fulani</h3> <h5>(CEO, IDVA, ISVA, Housekeeping)</h5>
 <p>Ngozi is the founder member of Sistah Space & is the senior member of staff in charge of day to day running. Ngozi qualified as an Independent Domestic Violence Advisor (IDVA) & an Independent Sexual Violence Advisor (ISVA). Ngozi handles all the case studies and one to one surgeries. </p>
 
-<h2>Management Committee Members</h2>
-<h3>Maxine Claye, Management Committee Member (Chair)</h3>
+<h2>Management Committee Members:</h2>
+<h3>Maxine Claye </h3> <h5>Management Committee Member (Chair)</h5>
 <p>Maxine is the founder of A Darker Shade, the unregistered charity outlet store that works very closely with Sistah Space.</p>
 <p>Maxine is in charge of the retail arm of Sistah Space.</p>
 
@@ -102,34 +102,35 @@
 <p>Management Commmitee Member (Housekeeping) & volunteer<p>
 <p>Sistah Joseph is tasked with making sure that service users and vistors alike are comfortable, cared for and otherwise refreshed, at Sistah Space.</p>
 
-<h3>Aaron Tanice Management Committee (Treasurer)</h3>
+<h3>Aaron Tanice</h3> <h5>Management Committee (Treasurer)</h5>
 <p>Aaron is one of our inhouse volunteers with a responsibility for safety of service users, staff and volunteers.</p>
 <p>Aaron holds a counselling degree and is one of the Sistah Space advisor in that regard.</p>
 
-<h3>Cynthia Oliver Management Committee (Secretary)</h3>
+<h3>Cynthia Oliver</h3> <h5> Management Committee (Secretary)</h5>
 
 <h3>Wendella B.</h3>
 <p>Management Committee Member (Housekeeping, volunteer)</p>
 
 <h2>External support:</h2>
 
-<h4>Hackney CVS (Support)</h4>
+<h5>Hackney CVS (Support)</h5>
 
-<h4>Carrise Forde (Sistah Space Ambassador)</h4>
+<h5>Carrise Forde (Sistah Space Ambassador)</h5>
 
-<h4>Djan Headley (Sistah Space youth Ambassador & workshop volunteer)</h4>
+<h5>Djan Headley (Sistah Space youth Ambassador & workshop volunteer)</h5>
 
-<h4>Hugh Brown (Transport)</h4>
+<h5>Hugh Brown (Transport)</h5>
 
-<h4>Izabela Jelonek (Web design/media)</h4>
+<h5>Izabela Jelonek (Web design/media)</h5>
 
-<h4>Rosanna Muatta (occasional fundraising)</h4>
+<h5>Rosanna Muatta (occasional fundraising)</h5>
 
-<h4>Yvonne Williams (Management Commitee Member)</h4>
+<h5>Yvonne Williams (Management Commitee Member)</h5>
 
-<h4>Yvonne William (Finance Volunteer)</h4>
+<h5>Yvonne William (Finance Volunteer)</h5>
+<br>
 
-In loving memory of Valerie Forde & baby Real-Jahzara
+<h4>In loving memory of Valerie Forde & baby Real-Jahzara</h4>
 
 
 
