--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -69,6 +69,7 @@
 </div>
 
 
+<div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social">
 
@@ -76,8 +77,14 @@
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
 
-  <p> Content </p>  
-</div>
+
+    <img class = "img-responsive" src="../images/5.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
+        <h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+      </div>
+      </div>
 
 <footer class="footer">
   <div class="container">
