--- a/pages/shop.html
+++ b/pages/shop.html
@@ -75,7 +75,7 @@
     </div>
 
 
-    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
+    <img class = "img-responsive" src="../images/shop 1.JPG" alt="picture">
       <div class ="text-area">
         </br>
         <h1 class = " text-center"> Shop at Sistah Space.</h1> <hr>
@@ -125,7 +125,17 @@
 </div> 
 <h3 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h3>
 <hr>
-<a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our Ebay page!</h3></a>
+
+<div class="row">
+  <div class="col-xs-6">
+    <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-right"> Visit our page on....</h3>
+  </div>
+  <div class="col-xs-6">
+    </a><img src="../images/ebay.png" class="img-responsive ebay-logo">
+  </div>
+</div>
+
+<hr>
 
 </div>
 </div>
