css font changes

--- a/pages/news.html
+++ b/pages/news.html
@@ -4,12 +4,13 @@
 <html>
 
 <head>
-   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <title > Sistah Space </title>
@@ -89,15 +90,20 @@
   </div>
 
 <div class="container">
-<div class ="container yellow">
+<div class ="container news-field">
 
-    <h3 class="text-center"> Sistah Space becomes part of Hackney Women's Haven </h3>
-      <div class ="row" >
+  
+      <div class ="row text-center">
+        <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
         <h4 class = "text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4> 
-        <h4 class = "text-center"> <b>8th of October at Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX. 2pm-7pm. </b> </h4>
-        <p class = "text-center"> More information to follow shortly.</p>
-      </div>
-      <br>
+      <ul class="date-and-time">
+         <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
+         <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
+      </ul>
+        <h4> <b>Venue:</b> Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX </h4>
+        <p>More information to follow shortly.</p>
+
+    </div>
 </div>
 
     <div class = "col-md-8">
