--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 
 <head>
-   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title > Why Sistah Space? </title>
 
 
@@ -80,7 +82,7 @@
     <img class = "img-responsive" src="../images/1.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h2 class = " text-center"> A domestic abuse organisation for African heritage people</h2> <hr>
+        <h1 class = " text-center"> A domestic abuse organisation for African heritage people</h1> <hr>
         <h4 class=" text-center "> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
       </div>
   </div>
