--- a/pages/donations.html
+++ b/pages/donations.html
@@ -3,13 +3,15 @@
 
 <html>
 <head>
-   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
@@ -101,7 +103,9 @@
     <p>Hannah Griffiths delivers a cheque for over &pound300 to Sistah Space. The money was raised on our behalf by Hannah's wonderful husband who ran the Hackney marathon.</p>
   </div>
   <div class ="col-md=6">
-    <p> content</p>
+    
+    
+
   </div>
 </div>
   <hr>
