--- a/pages/shop.html
+++ b/pages/shop.html
@@ -3,13 +3,15 @@
 
 <html>
 <head>
-   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title > Shop to support Sistah Space </title>
 
   <!-- http://www.favicon-generator.org/ -->
@@ -64,7 +66,6 @@
     </div>
   </div>
 </div>
-</div>
 
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
@@ -117,7 +118,7 @@
 
  <div class="row">
     <div class="col-xs-6">  
-      <img class="img-responsive" src="../images/watch2.JPG">
+      <img class="img-responsive" src="../images/red.jpg">
     </div>
 <div class="col-xs-6">
       <img class="img-responsive" src="../images/set1.jpg">
