--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -3,44 +3,47 @@
 
 <html>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
+ <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-  <link rel="stylesheet" type="text/css" href="../css/css.css"/>  
+  <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
 </head>
 
 <body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="../index.html" class="navbar-brand"> Home Page</a>
-    </div>
 
-    <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav" >
-        <li class = "dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
-            <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">Who are we?</a></li> 
-            <li><a href="../pages/history.html">Background history</a></li> 
-          </ul>
-        </li>      
-        <li class = "dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+  <header>
+   <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
+    <div class="container"> 
+      <div class="navbar-header"> 
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+          <span class="icon-bar"></span> 
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>  
+        </button>
+        <a href="../index.html" class="navbar-brand"> Home Page</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav" >
+          <li class = "dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
+              <li><a href="../pages/abuse.html">What is abuse?</a></li>
+              <li><a href="../pages/our_team.html">Who are we?</a></li> 
+              <li><a href="../pages/history.html">Background history</a></li> 
+            </ul>
+          </li>      
+          <li class = "dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
             <ul class = "dropdown-menu">  
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li> 
@@ -49,42 +52,42 @@
 
 
 
-        <li class="dropdown">
-          <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+          <li class="dropdown">
+            <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
               <li><a href="../pages/donations.html"> Donate </a></li>
               <li><a href="../pages/volunteer.html"> Volunteer </a></li>
               <li><a href="../pages/shop.html"> Shop </a></li>
-              </ul>
+            </ul>
           </li>
-        <li><a href="../pages/news.html">News</a></li>
+          <li><a href="../pages/news.html">News</a></li>
 
-      </ul>  
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
-      </ul>
+        </ul>  
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        </ul>
+      </div>
     </div>
   </div>
-</div>
-</div>
 
+</header>
 
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
+ <div class="social">
 
-      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
-      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
-    </div>
+  <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+  <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+</div>
 
 
-    <img class = "img-responsive" src="../images/5.JPG" alt="picture">
-      <div class ="text-area">
-        </br>
-        <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
-        <h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
-      </div>
-      </div>
+<img class = "img-responsive" src="../images/5.JPG" alt="picture">
+<div class ="text-area">
+</br>
+<h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
+<h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+</div>
+</div>
 
 <footer class="footer">
   <div class="container">
@@ -112,4 +115,4 @@
 
 </body>
 </html>
-  
+
