css updates continued, navbar fixed

--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -36,7 +36,7 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">Who are we?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li>
             <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
@@ -69,19 +69,6 @@
 </div>
 </div>
 
-<!-- <div class = "container">
-
- <button class="escape" id="escape">Quickly leave this page</button>
-  <div class="social">
-
-    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
-    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
-  </div>
-
-  <p> Content </p>
-</div> -->
-
-
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social">
@@ -92,7 +79,7 @@
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h2 class = " text-center"> Two women a week are killed by a current or former partner.</h2>   <hr>
+        <h1 class = " text-center"> Two women a week are killed by a current or former partner.</h1>   <hr>
         <h4 class = " text-center">  Many more are left with life changing injuries.</h4> </br>
       </div>
   </div>
@@ -101,55 +88,49 @@
   <div class="container">
     <div class="main-copy">
 
+      <h2> What is abuse?</h2>
+        <p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
+        <p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
 
-<h2> What is abuse?</h2>
-
-<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
-<p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
-
-
-<h2> How to spot the warning signs</h2>
-<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
+        <h2> How to spot the warning signs</h2>
+        <p class="text-align"> Warning signs might be diffult to spot and it might be difficult for victims themselves to realise and admin that they are in an abusive relationship. Hence, often victims of abuse do not ask for help.</p>
 
 <div class="container">
   <div class="row">
-     <div class="col-xs-12 col-xs-5">
-         <h3 class> If you're concerned you might be affected </h3>
-<ul>
-	<li>When a woman decides to leave the relationship</li>
-	<li>With each pregnancy or child, the situation can become more intense</li>
-	<li>When he doesn't want you to main a relationship with famil or friends</li>
-	<li>If he has a history of abusive behaviour</li>
-	<li>When his mood switches from really nice to really nasty suddenly and without warning or reason</li>
-	<li>If he controls the finances and pretty much everything, including what you wear and where you go.</li>
-	<li>He phones you constantly and tries to monitor your movements</li>
-	<li>Does he present as a very nice person to the rest of the world.</li>
-	<li>Does he embarrass you in front of others.</li>
-	<li>Does he blame her for the abuse</li>
-	<li>Is he verbally abusive</li>
+     <div class="col-md-6 col">
+         <h3 class> Warning signs </h3>
+          <ul>
+          	<li>When a woman decides to leave the relationship</li>
+          	<li>With each pregnancy or child, the situation can become more intense</li>
+          	<li>When he doesn't want you to maintain a relationship with famil or friends</li>
+          	<li>If he has a history of abusive behaviour</li>
+          	<li>When his mood switches from really nice to really nasty suddenly and without warning or reason</li>
+          	<li>If he controls the finances and pretty much everything, including what you wear and where you go.</li>
+          	<li>He phones you constantly and tries to monitor your movements</li>
+          	<li>He presents as a very nice person to the rest of the world.</li>
+          	<li>He embarrasses you in front of others.</li>
+          	<li>He blames her for the abuse</li>
+          	<li>He is verbally abusive</li>
 
-</ul>
-</div>
+          </ul>
+    </div>
 
-<div class="col-xs-12 col-xs-5">
-<h3> If you're concerned about someone else</h3>
-<ul>
-<li>Is he verbally abusive</li>
-<li>Does he make threats against you or family members if you report abuse or threaten to leave.</li>
-<li>Do you change your behaviour to keep the peace.</li>
-<li>Does the 'vibe' in your house depend on the mood he is in.</li>
-<li>Does he force you to have sex or do you relent for fear of what may happen if you don't comply</li>
-<li>Abusive behaviour includes</li>
-<li>wearing and threatening</li>
-<li>destroying furniture or your possesions</li>
-<li>Threatening to report you to immigration (if you don't have leave to remain)</li>
-<li>Throwing you out of the house</li>
-<li>Threatening to reveal something personal about you.</li>
-<li>Threatening to or harming a family member (children, parent)</li>
-</ul>
-</div>
-</div>
-</div>
+    <div class="col-md-6">
+      <h3> Signs of abuse </h3>
+        <ul>
+          <li>He is verbally abusive</li>
+          <li>He makes threats against you or family members if you report abuse or threaten to leave.</li>
+          <li>You change your behaviour to keep the peace.</li>
+          <li>The 'vibe' in your house depends on the mood he is in.</li>
+          <li>He forces you to have sex or you relent for fear of what may happen if you don't comply</li>
+          <li>Abusive behaviour including threatening, destroying furniture or your possessions</li>
+          <li>Threatening to report you to immigration (if you don't have leave to remain)</li>
+          <li>Throwing you out of the house</li>
+          <li>Threatening to reveal something personal about you.</li>
+          <li>Threatening to or harming a family member (children, parent)</li>
+        </ul>
+    </div>
+  </div>
 </div>
 </div>
 </div>
