--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -11,17 +11,16 @@
   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
   <title > Sistah Space </title>
 
 </head>
 <body>
 	<body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
+ <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -32,22 +31,20 @@
       <ul class="nav navbar-nav" >
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
-          <ul class="dropdown-menu">  
+          <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">Who are we?</a></li> 
-            <li><a href="../pages/history.html">Background history</a></li>  
+            <li><a href="../pages/our_team.html">Who are we?</a></li>
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
-        </li>      
+        </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
-            <ul class = "dropdown-menu">  
+            <ul class = "dropdown-menu">
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
             </ul>
           </li>
-
-
 
         <li class="dropdown">
           <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
@@ -59,14 +56,14 @@
           </li>
         <li><a href="../pages/news.html">News</a></li>
 
-      </ul>  
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
 </div>
-</div>	
+</div>
 
 
 <div class = "jumbotron">
@@ -81,8 +78,9 @@
     <img class = "img-responsive" src="../images/5.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
-        <h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+        <h1 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h1> <hr>
+        <h4 class=" text-center "> It is a safe space in a heart of our community where we provide immediate support to victims of abuse and their familes.</h4>
+        <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
       </div>
 
