--- a/pages/shop.html
+++ b/pages/shop.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
+ <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -36,13 +36,13 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">Who are we?</a></li> 
-            <li><a href="../pages/history.html">Background history</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li>
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
-        </li>      
+        </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
-            <ul class = "dropdown-menu">  
+            <ul class = "dropdown-menu">
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
             </ul>
@@ -59,9 +59,9 @@
               </ul>
           </li>
                <li><a href="../pages/news.html">News</a></li>
-      </ul>  
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
@@ -75,24 +75,24 @@
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
 
-
     <img class = "img-responsive" src="../images/shop 1.JPG" alt="picture">
       <div class ="text-area">
         </br>
         <h1 class = " text-center"> Shop at Sistah Space.</h1> <hr>
-        <h4 class=" text-center emphasise"> At Sistah Space we run a pop up shop to raise funds for our activities.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+        <h4 class=" text-center"> At Sistah Space we run a pop up shop to raise funds for our activities.
+        </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
       </div>
 
   <div class="container ">
     <div class=" main-copy">
 
-  
-  <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales.</p>  
+
+  <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales.</p>
   <p> We have a number of cultural, wellbeing books and CDs available. We also have a wide range of Survivor Dolls, watches and many other quality products. <p>
   <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><p> Visit our Ebay page!</p></a>
 
- 
+
   <div class="row">
     <div class="col-xs-6">
       <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
@@ -100,31 +100,31 @@
     <div class="col-xs-6">
       <img class="img-responsive" id="shop2" src="../images/SAM_2190.JPG">
     </div>
-</div>  
-<h3 class="text-center"> Cakes and donated items</h3>
-<hr>  
+</div>
+<h2 class="text-center"> Cakes and donated items</h2>
+<hr>
 
  <div class="row">
-    <div class="col-xs-6">  
+    <div class="col-xs-6">
       <img class="img-responsive" src="../images/shop 3.JPG">
     </div>
 <div class="col-xs-6">
      <img class="img-responsive" src="../images/SAM_2185.JPG">
 
     </div>
-</div> 
-<h3 class="text-center"> Handmade Survivior Dolls</h3>
+</div>
+<h2 class="text-center"> Handmade Survivior Dolls</h2>
 <hr>
 
  <div class="row">
-    <div class="col-xs-6">  
+    <div class="col-xs-6">
       <img class="img-responsive" src="../images/red.jpg">
     </div>
 <div class="col-xs-6">
       <img class="img-responsive" src="../images/set1.jpg">
     </div>
-</div> 
-<h3 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h3>
+</div>
+<h2 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h2>
 <hr>
 
 <div class="row">
@@ -166,4 +166,3 @@
 
 </body>
 </html>
-  
