--- a/pages/history.html
+++ b/pages/history.html
@@ -14,20 +14,16 @@
 
   <title > Why Sistah Space? </title>
 
-
-
 </head>
-
 <body>
-
    <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+     <div class="container">
+       <div class="navbar-header">
+         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+           <span class="icon-bar"></span>
+         </button>
       <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
@@ -38,22 +34,18 @@
           <ul class="dropdown-menu">
            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/our_team.html">What we do?</a></li>
             <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
 
-            <ul class = "dropdown-menu">  
+            <ul class = "dropdown-menu">
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
-
             </ul>
           </li>
-
-
-
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
@@ -63,24 +55,15 @@
               </ul>
           </li>
           <li><a href="../pages/news.html">News</a></li>
-      </ul>  
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
-
+        <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
 </div>
 
-
-
-
-
-
-
 <div class = "jumbotron">
-        
-  
 
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social">
@@ -90,18 +73,19 @@
     </div>
 
   <img class = "img-responsive" src="../images/6.JPG" alt="picture">
-
+  <div class ="text-area">
+    </br>
+    <h1 class = " text-center"> Sistah Space is striving to truly represent African heritage women. </h1> <hr>
+    <h4 class=" text-center "> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
+  </div>
   </div>
 
 <div class = "container main-copy">
 
-<h1>The history</h1>
+<h2>The history</h2>
     <p class="text-justify">Many UK born or raised African heritage people grew up in time when only white men were teachers, head teachers, vicars, bank managers, police. It was almost unheard of for an African heritage woman or man to be a marriage registrar or hold any other similar role. All high profile jobs were predominantly done by white men. In contrast, African heritage people were doing all the menial jobs, like cleaning, factory work and in particular, railway and London Transport jobs.</p>
-
     <p class="text-justify">The well-known phrase, 'No blacks, No Irish, No dogs' was in many windows in 1950/60s Britain. Many of the children of that time are now adults and although much has changed in terms of work opportunities, equality for all has not been achieved.</p>
-
     <p class="text-justify">Back then, in addition to this, there was not much support for any person suffering domestic abuse. It was very much considered a 'domestic' affair to be sorted out by the people involved. This did not bode well for women in particular, African heritage women even less so.</p>
-
     <p class="text-justify">The repercussions of that era are still very much felt today, with many African heritage victims of abuse, extremely reluctant to report crime to the police or other agencies. The reasons given are many and include:</p>
 
     <ul>
