--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -12,17 +12,17 @@
   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
+
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
 </head>
 
 <body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
+ <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
@@ -36,20 +36,17 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">Who are we?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li>
             <li><a href="../pages/history.html">Background history</a></li>
           </ul>
-        </li>      
+        </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
-            <ul class = "dropdown-menu">  
+            <ul class = "dropdown-menu">
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
             </ul>
           </li>
-
-
-
         <li class="dropdown">
           <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
@@ -58,12 +55,10 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-
-        <li><a href="../pages/news.html">News</a></li>
-
-      </ul>  
+        <li><a href="../pages/news.html">News</a></li
+      </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
@@ -73,15 +68,14 @@
 <div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social">
-
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h2 class = " text-center"> Sistah Space is staffed by volunteers who devote their time to provide the community with support.</h2>   <hr>
-        <h4 class = " text-center">  </h4> </br>
+        <h1 class = " text-center"> Sistah Space is run by volunteers.</h1>   <hr>
+        <h4 class = " text-center"> Most of the staff at Sistah Space are volunteers concerned with a cause of domestic abuse. THeir devote their time and resources helping those in need of support.</h4> </br>
       </div>
   </div>
 
@@ -176,4 +170,3 @@
 
 </body>
 </html>
-  
