--- a/pages/volunteer.html
+++ b/pages/volunteer.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" type="text/css" href="../css/css.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
+
   <title > Sistah Space </title>
   <!-- http://www.favicon-generator.org/ -->
 </head>
@@ -20,13 +20,13 @@
 <body>
 
   <header>
-   <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-    <div class="container"> 
-      <div class="navbar-header"> 
+   <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+    <div class="container">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-          <span class="icon-bar"></span> 
           <span class="icon-bar"></span>
-          <span class="icon-bar"></span>  
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
         <a href="../index.html" class="navbar-brand"> Home Page</a>
       </div>
@@ -38,19 +38,17 @@
             <ul class="dropdown-menu">
               <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
               <li><a href="../pages/abuse.html">What is abuse?</a></li>
-              <li><a href="../pages/our_team.html">Who are we?</a></li> 
-              <li><a href="../pages/history.html">Background history</a></li> 
-            </ul>
-          </li>      
-          <li class = "dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
-            <ul class = "dropdown-menu">  
-              <li><a href="../pages/advice.html"> Advice </a></li>
-              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li> 
+              <li><a href="../pages/our_team.html">Who are we?</a></li>
+              <li><a href="../pages/history.html">Background history</a></li>
             </ul>
           </li>
-
-
+          <li class = "dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+            <ul class = "dropdown-menu">
+              <li><a href="../pages/advice.html"> Advice </a></li>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
+            </ul>
+          </li>
 
           <li class="dropdown">
             <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
@@ -62,9 +60,9 @@
           </li>
           <li><a href="../pages/news.html">News</a></li>
 
-        </ul>  
+        </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+          <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
         </ul>
       </div>
     </div>
@@ -84,9 +82,13 @@
 <img class = "img-responsive" src="../images/5.JPG" alt="picture">
 <div class ="text-area">
 </br>
-<h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
-<h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+<h1 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h1> <hr>
+<h4 class=" text-center"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
 </div>
+</div>
+
+<div class = "container container-main main-copy">
+  <p>Sistah Space is able to run its day to day activities thanks to volunteers who devote their times and resources. </p>
 </div>
 
 <footer class="footer">
@@ -115,4 +117,3 @@
 
 </body>
 </html>
-
