--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav" >
         <li class = "dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">About<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="pages/abuse.html">What is abuse?</a></li>
@@ -40,7 +40,7 @@
           </ul>
         </li>
         <li class = "dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How we can help<span class="caret"></span></a>
 
           <ul class = "dropdown-menu">
             <li><a href="pages/advice.html"> Advice </a></li>
@@ -48,7 +48,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How you can help<span class="caret"></span></a>
           <ul class = "dropdown-menu">
             <li><a href="pages/donations.html"> Donate </a></li>
             <li><a href="pages/volunteer.html"> Volunteer </a></li>
@@ -247,13 +247,25 @@
 
  <div class="row">
   <div class="col-sm-4 ">
-    <div class="panel panel-default" id ="panel-green">
-      <div class="panel-body text-center">
-        <h2 class="panel-title">Donate</h2>
-        <p p class= "panel-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
-        <a href="pages/donations.html" target="pages/donations.html" class = "link">
-         Find out more...
-       </a>
+    <div class="card">
+      <div class="card-content">
+        <div class="card-front">
+          <div class="panel panel-default" id ="panel-green">
+            <div class="panel-body text-center">
+              <h2 class="panel-title">Donate</h2>
+            </div>
+          </div>
+        </div>
+        <div class="card-back">
+          <div class="panel panel-default" id ="panel-green">
+            <div class="panel-body text-center">
+              <p p class= "panel-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
+              <a href="pages/donations.html" target="pages/donations.html" class = "link">
+               Find out more...
+             </a>
+           </div>
+         </div>
+       </div>
      </div>
      </div>
    </div>
