html and css changes
media query for 1100px added

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
     <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
-    <div class="social">
-
+    <div class="social social-header">
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
@@ -158,6 +157,10 @@
 
     </div>
   </div>
+  <div class="social social-intro">
+    <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+    <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+  </div>
 <hr>
 
   <div class="row">
@@ -174,7 +177,7 @@
 
 
     <div class = "col-sm-6 ">
-      <figure class = "figure">
+      <figure class="figure">
         <img class="valerie picture-holder figure-img  img-responsive center-block" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
         <figcaption class= "figure-caption text-center"> Valerie Ford and her daughter. </figcaption>
       </figure>
@@ -184,12 +187,12 @@
 <hr>
 
   <h2 class="text-center"> News </h3>
-<div class ="container news-field">
+<div class="news-field">
 
 
-      <div class ="row text-center">
+      <div class="text-center">
         <h3 class="text-center"> <u> <b> Important information! </b> </u> </h3>
-      	<h4 class = "text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
+      	<h4 class="text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4>
       <ul class="date-and-time">
       	 <li><h4>  <b>Date:</b> 8th of October 2016 </h4></li>
          <li><h4> <b>Time:</b> 2pm-7pm </h4></li>
@@ -245,59 +248,49 @@
  </div>
 
 
- <div class="row">
-  <div class="col-sm-4 ">
-    <div class="card">
-      <div class="card-content">
-        <div class="card-front">
-          <div class="panel panel-default" id ="panel-green">
-            <div class="panel-body text-center">
-              <h2 class="panel-title">Donate</h2>
-            </div>
-          </div>
-        </div>
-        <div class="card-back">
-          <div class="panel panel-default" id ="panel-green">
-            <div class="panel-body text-center">
-              <p p class= "panel-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
-              <a href="pages/donations.html" target="pages/donations.html" class = "link">
-               Find out more...
-             </a>
-           </div>
-         </div>
+ <div class="row card-container">
+   <div class="card card-green">
+     <div class="card-content">
+       <div class="card-front">
+         <h2 class="card-title">Donate</h2>
+       </div>
+       <div class="card-back card-green">
+         <p class= "card-text">We accept donations which help us furnish Sistah Space and provide our services. </p>
+         <a href="pages/donations.html" class="card-link">
+           Find out more...
+         </a>
        </div>
      </div>
+   </div>
+
+   <div class="card card-yellow">
+     <div class="card-content">
+       <div class="card-front">
+         <h2 class="card-title">Volunteer</h2>
+       </div>
+       <div class="card-back card-yellow">
+         <p class= "card-text">Sistah Space is run by volunteers. If you have skills to help us please get in touch.</p>
+         <a href="pages/volunteer.html" class="card-link">
+           Find out more...
+         </a>
+       </div>
      </div>
    </div>
 
-
- <div class="col-sm-4 ">
-  <div class="panel panel-default" id ="panel-yellow">
-    <div class="panel-body text-center">
-      <h2 class="panel-title">Volunteer</h2>
-      <p class= "panel-text">Sistah Space is run by volunteers. If you have skills to help us please get in touch. </p>
-      <a href="pages/donations.html" target="pages/volunteer.html" class = "link">
-       Find out more...
-     </a>
+   <div class="card card-red">
+     <div class="card-content">
+       <div class="card-front">
+         <h2 class="card-title">Shop</h2>
+       </div>
+       <div class="card-back card-red">
+         <p class= "card-text">We run a shop at Sistah Space to raise funds for our work. </p>
+         <a href="pages/shop.html" class="card-link">
+           Find out more...
+         </a>
+       </div>
+     </div>
    </div>
  </div>
-</div>
-
-
-<div class="col-sm-4">
-  <div class="panel panel-default" id ="panel-red">
-    <div class="panel-body text-center">
-      <h2 class="panel-title">Shop</h2>
-      <p class= "panel-text">We run a shop at Sistah Space to raise funds for our work.  </p>
-      <a href="pages/donations.html" target="pages/shop.html" class = "link">
-       Find out more...
-     </a>
-   </div>
- </div>
- </div>
-
-
-</div>
 <hr>
 </div>
 
