nav bar fixed on all pages

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <p>More information to follow shortly.</p>
     </div>
 </div>
+<div class="row">
     <div class = "col-md-8">
-
       <h3>BEGINNERS / INTERMEDIATE SEWING CLASS </h3>
       <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></p>
       <p><b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG
@@ -219,19 +219,14 @@
       <i><p>Brothas welcome.</p>
       <p>Please bring your own fabric.</p>
       <p>Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</p></i>
-
  </div>
-<div class = "container">
-
-
     <div class = "col-md-4">
       <img class="img-responsive news-pic" src="images/sewing_class.jpg">
+    </div>
 
-    </div>
-    </div>
     <a href="pages/news.html"><p class="text-center">Click here to view more news stories...</p></a>
     <hr>
-  </div>
+
 
 
 
